Update artifact description

--- a/operator.mdx
+++ b/operator.mdx
@@ -12,7 +12,7 @@ Build engaging C2C interactions with voice, video, and rich text chat. Any type 
 
 ## Features
 ### API endpoint artifact
-The Azure Communication Service endpoint artifact will output the API endpoint of the Communication service so that your applications can natively use it as an environment variable.
+The Azure Communication Service will produce an endpoint artifact. This includes the endpoint and security policies needed to connect to the Azure Communication Service.
 
 ## Design
 Our bundle includes the following design choices to help simplify your deployment:
